@@ -5,14 +5,14 @@
  */
 package org.camunda.optimize.dto.optimize.query.variable;
 
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 import lombok.experimental.Accessors;
 import lombok.experimental.FieldNameConstants;
 import org.camunda.optimize.dto.optimize.OptimizeDto;
 
-import javax.validation.constraints.NotBlank;
-import javax.validation.constraints.NotNull;
 import java.util.List;
 
 import static java.util.stream.Collectors.toList;
@@ -47,6 +47,6 @@ public class ExternalProcessVariableRequestDto implements OptimizeDto {
         .setProcessInstanceId(varDto.getProcessInstanceId())
         .setProcessDefinitionKey(varDto.getProcessDefinitionKey())
         .setSerializationDataFormat(varDto.getSerializationDataFormat()))
-      .collect(toList());
+      .toList();
   }
 }
